--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <base href="/">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="./css/styles.css" rel="stylesheet" type="text/css">
     <link href="./css/components/libs/slick.css" rel="stylesheet" type="text/css">
     
 </head>
@@ -920,7 +920,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="js/libs/slick.min.js"></script> -->
     <script type="text/javascript" src="./js/libs/slick.min.js"></script>
-    <script type="text/javascript" src="js/bundle.js"></script>
+    <script type="text/javascript" src="./js/bundle.js"></script>
     <!--<script type="text/javascript" src="../js/vendors/bootstrap-select.js"></script>-->
     <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
