--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAX30</title>
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel='stylesheet' type='text/css'>
+    <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link href="./css/styles.css" rel="stylesheet" type="text/css">
     <link href="./css/components/libs/slick.css" rel="stylesheet" type="text/css">
 </head>
@@ -958,7 +958,7 @@
     </section>
 
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="js/libs/slick.min.js"></script> -->
     <script type="text/javascript" src="./js/libs/slick.min.js"></script>
     <script type="text/javascript" src="./js/libs/moment.min.js"></script>
