--- a/index.html
+++ b/index.html
@@ -203,7 +203,15 @@
                     <canvas class="dax30-live__canvas-chart" id="dax30-chart" width="800" height="450"></canvas>
                 </div>
             </div>
-            <iframe frameborder="0" width="100%" height="300" class="dax30-live__frame"></iframe>
+            <div class="dax30-live__global">
+                <h3 class="dax30-live__global-title dax30-subtitle">
+                    DAX30 Global Opinion
+                </h3>
+                <p class="dax30-live__global-text dax30-text">
+                    This is the general sentiment toward investing in DAX30 at the present moment…
+                </p>
+                <iframe frameborder="0" width="300px" height="300" class="dax30-live__frame"></iframe>
+            </div>
             <h3 class="dax30-live__spec-subtitle dax30-subtitle">
                 CONTRACT SPECIFICATIONS
             </h3>
@@ -335,9 +343,9 @@
                     <div class="specification__row">
                         <p class="specification__prop">SWAP Value (Short), Interest Rate</p>
                         <p class="specification__value">-1.88</p>
-                        <div class="specification__link-wrapper">
-                            <a href="#" class="specification__link">More Details</a>
-                        </div>
+                    </div>
+                    <div class="specification__link-wrapper">
+                        <a href="#" class="specification__link">More Details</a>
                     </div>
                 </div>
             </div>
@@ -391,17 +399,16 @@
                 </div>
                 <div class="dax30-advantages__benefit">
                     <div class="dax30-advantages__benefit-icon">
-                        <svg aria-label="Benefit icon" width="30px" height="30px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                        <svg aria-label="Benefit icon" width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <g id="Instruments" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
-                                <g id="AM-5.0-Instruments-page-2.1" transform="translate(-854.000000, -3522.000000)" stroke="#2572DE" stroke-width="2">
+                            <g id="Instruments" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <g id="AM-5.0-Instruments-page-2.1" transform="translate(-554.000000, -3522.000000)">
                                     <g id="Section" transform="translate(0.000000, 3287.000000)">
-                                        <g id="Benefit" transform="translate(740.000000, 221.000000)">
-                                            <g id="icon-16" transform="translate(115.000000, 15.000000)">
-                                                <path d="M30,15 C30,23.284 23.284,30 15,30 C6.716,30 0,23.284 0,15 C0,6.716 6.716,0 15,0 C23.284,0 30,6.716 30,15 Z" id="Stroke-1"></path>
-                                                <path d="M23,15 C23,23.284 19.418,30 15,30 C10.582,30 7,23.284 7,15 C7,6.716 10.582,0 15,0 C19.418,0 23,6.716 23,15 Z" id="Stroke-3"></path>
-                                                <path d="M15,0 L15,30" id="Stroke-5"></path>
-                                                <path d="M0,15 L30,15" id="Stroke-7"></path>
+                                        <g id="Benefit" transform="translate(440.000000, 221.000000)">
+                                            <g id="icon-81" transform="translate(115.000000, 15.000000)">
+                                                <circle id="Oval-2" stroke="#2572DE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" cx="15" cy="15" r="15"></circle>
+                                                <path d="M18.0341797,17.203125 L14.0634766,17.203125 L14.0634766,17.2773438 C14.0634766,18.0937541 14.2722147,18.7215147 14.6896973,19.1606445 C15.1071798,19.5997743 15.687008,19.8193359 16.4291992,19.8193359 C16.787925,19.8193359 17.1389143,19.7930504 17.4821777,19.7404785 C17.8254412,19.6879066 18.1547836,19.60905 18.4702148,19.5039062 L18.6650391,21.6098633 C18.3124982,21.7026372 17.947593,21.7737628 17.5703125,21.8232422 C17.193032,21.8727216 16.8126647,21.8974609 16.4291992,21.8974609 C14.9138922,21.8974609 13.689295,21.4799846 12.7553711,20.6450195 C11.8214472,19.8100544 11.3544922,18.6875071 11.3544922,17.2773438 L11.3544922,17.203125 L10,17.203125 L10,15.7836914 L11.3544922,15.7836914 L11.3544922,14.3920898 L10,14.3920898 L10,12.9726562 L11.3544922,12.9726562 L11.3544922,12.8520508 C11.3544922,11.3800382 11.8199009,10.2033735 12.7507324,9.32202148 C13.6815639,8.44066942 14.9015224,8 16.4106445,8 C16.7817401,8 17.1450991,8.02473934 17.5007324,8.07421875 C17.8563657,8.12369816 18.244464,8.19482375 18.6650391,8.28759766 L18.4702148,10.4121094 C18.1424137,10.3131505 17.8037941,10.2342939 17.4543457,10.1755371 C17.1048973,10.1167803 16.7570004,10.0874023 16.4106445,10.0874023 C15.6808232,10.0874023 15.1071798,10.3317033 14.6896973,10.8203125 C14.2722147,11.3089217 14.0634766,11.9799762 14.0634766,12.8334961 L14.0634766,12.9726562 L18.0341797,12.9726562 L18.0341797,14.3920898 L14.0634766,14.3920898 L14.0634766,15.7836914 L18.0341797,15.7836914 L18.0341797,17.203125 Z"
+                                                    id="€" fill="#2572DE"></path>
                                             </g>
                                         </g>
                                     </g>
@@ -421,16 +428,17 @@
                 </div>
                 <div class="dax30-advantages__benefit">
                     <div class="dax30-advantages__benefit-icon">
-                        <svg aria-label="Benefit icon" width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                        <svg aria-label="Benefit icon" width="30px" height="30px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <g id="Instruments" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                <g id="AM-5.0-Instruments-page-2.1" transform="translate(-554.000000, -3522.000000)">
+                            <g id="Instruments" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+                                <g id="AM-5.0-Instruments-page-2.1" transform="translate(-854.000000, -3522.000000)" stroke="#2572DE" stroke-width="2">
                                     <g id="Section" transform="translate(0.000000, 3287.000000)">
-                                        <g id="Benefit" transform="translate(440.000000, 221.000000)">
-                                            <g id="icon-81" transform="translate(115.000000, 15.000000)">
-                                                <circle id="Oval-2" stroke="#2572DE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" cx="15" cy="15" r="15"></circle>
-                                                <path d="M18.0341797,17.203125 L14.0634766,17.203125 L14.0634766,17.2773438 C14.0634766,18.0937541 14.2722147,18.7215147 14.6896973,19.1606445 C15.1071798,19.5997743 15.687008,19.8193359 16.4291992,19.8193359 C16.787925,19.8193359 17.1389143,19.7930504 17.4821777,19.7404785 C17.8254412,19.6879066 18.1547836,19.60905 18.4702148,19.5039062 L18.6650391,21.6098633 C18.3124982,21.7026372 17.947593,21.7737628 17.5703125,21.8232422 C17.193032,21.8727216 16.8126647,21.8974609 16.4291992,21.8974609 C14.9138922,21.8974609 13.689295,21.4799846 12.7553711,20.6450195 C11.8214472,19.8100544 11.3544922,18.6875071 11.3544922,17.2773438 L11.3544922,17.203125 L10,17.203125 L10,15.7836914 L11.3544922,15.7836914 L11.3544922,14.3920898 L10,14.3920898 L10,12.9726562 L11.3544922,12.9726562 L11.3544922,12.8520508 C11.3544922,11.3800382 11.8199009,10.2033735 12.7507324,9.32202148 C13.6815639,8.44066942 14.9015224,8 16.4106445,8 C16.7817401,8 17.1450991,8.02473934 17.5007324,8.07421875 C17.8563657,8.12369816 18.244464,8.19482375 18.6650391,8.28759766 L18.4702148,10.4121094 C18.1424137,10.3131505 17.8037941,10.2342939 17.4543457,10.1755371 C17.1048973,10.1167803 16.7570004,10.0874023 16.4106445,10.0874023 C15.6808232,10.0874023 15.1071798,10.3317033 14.6896973,10.8203125 C14.2722147,11.3089217 14.0634766,11.9799762 14.0634766,12.8334961 L14.0634766,12.9726562 L18.0341797,12.9726562 L18.0341797,14.3920898 L14.0634766,14.3920898 L14.0634766,15.7836914 L18.0341797,15.7836914 L18.0341797,17.203125 Z"
-                                                    id="€" fill="#2572DE"></path>
+                                        <g id="Benefit" transform="translate(740.000000, 221.000000)">
+                                            <g id="icon-16" transform="translate(115.000000, 15.000000)">
+                                                <path d="M30,15 C30,23.284 23.284,30 15,30 C6.716,30 0,23.284 0,15 C0,6.716 6.716,0 15,0 C23.284,0 30,6.716 30,15 Z" id="Stroke-1"></path>
+                                                <path d="M23,15 C23,23.284 19.418,30 15,30 C10.582,30 7,23.284 7,15 C7,6.716 10.582,0 15,0 C19.418,0 23,6.716 23,15 Z" id="Stroke-3"></path>
+                                                <path d="M15,0 L15,30" id="Stroke-5"></path>
+                                                <path d="M0,15 L30,15" id="Stroke-7"></path>
                                             </g>
                                         </g>
                                     </g>
@@ -697,7 +705,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="dax30-why-trade__reason dax30-why-trade__reason--on-desktop">
+            </div>
+            <div class="dax30-why-trade__reasons dax30-why-trade__reasons--on-desktop">
+                <div class="dax30-why-trade__reason">
                     <div class="dax30-why-trade__reason-icon">
                         <svg aria-label="Reason icon" width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -732,7 +742,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dax30-why-trade__reason dax30-why-trade__reason--on-desktop">
+                <div class="dax30-why-trade__reason">
                     <div class="dax30-why-trade__reason-icon">
                         <svg aria-label="Reason icon" width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -762,7 +772,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dax30-why-trade__reason dax30-why-trade__reason--on-desktop">
+                <div class="dax30-why-trade__reason">
                     <div class="dax30-why-trade__reason-icon">
                         <svg aria-label="Reason icon" width="26px" height="32px" viewBox="0 0 26 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -791,7 +801,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dax30-why-trade__reason dax30-why-trade__reason--on-desktop">
+                <div class="dax30-why-trade__reason">
                     <div class="dax30-why-trade__reason-icon">
                         <svg aria-label="Reason icon" width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
