--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
                         </svg>
                     </div>
                     <div class="dax30-why-trade__reason-body">
-                        <h4 class="dax30-why-trade__reason-title">
+                        <h4 class="dax30-why-trade__reason-title dax30-why-trade__reason-title--one-line">
                             MetaTrader 4 & MetaTrader 5
                         </h4>
                         <p class="dax30-why-trade__reason-text dax30-text dax30-text">
